--- a/workflows/github-actions-demo.yml
+++ b/workflows/github-actions-demo.yml
@@ -32,19 +32,20 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_LOGIN }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD  
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        context: exercicios/para-sala/users-api-aula
-        push: true
-        tags: raissabrizeno/users-api-aula:1.0.0
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+    - name: Build the Docker image
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest .
+
+    - name: Push the Docker image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/users-api-aula:1.0.0
+
+    - name: Log out from Docker Hub
+      run: docker logout
+        
 
 
