--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,3 +1,4 @@
+        
 name: CI
 
 on:
@@ -31,24 +32,28 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+    # lint para garantir que o código segue os padrões definidos
+    - name: Run ESLint
+      run: npm run lint
+
+    # verificação de vulnerabilidades em pacotes
+    - name: Run security audit
+      run: npm audit
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Run ESLint
-      run: npm run lint
-  
     - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
-    - name: Build the Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest .
-
-    - name: Push the Docker image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/users-api-aula:1.0.0
-
-    - name: Log out from Docker Hub
-      run: docker logout
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: exercicios/para-sala/users-api-aula
+        push: true
+        tags: raissabrizeno/users-api-aula:1.0.0
         
-
-
