--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -52,16 +52,19 @@ jobs:
     # setamos o Docker Buildx no ambiente onde o job está sendo executado. 
     # Permite construir imagens Docker para várias arquiteturas 
     - name: Set up Docker Buildx
+      if: github.ref == 'refs/heads/main'
       uses: docker/setup-buildx-action@v3
 
     # faz login no docker hub 
     - name: Log in to Docker Hub
+      if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Build and push
+      if: github.ref == 'refs/heads/main'
       uses: docker/build-push-action@v4
       with:
         context: exercicios/para-sala/users-api-aula
